--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
+    "node-localstorage": "^2.2.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
